tests/test-files/parse-method.txt
================================================================================
100 Malformed method definition
================================================================================

(package test)

(define-class (Greetable :a)
  (Greet :a Unit))

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:12
   |
 3 |  (define-class (Greetable :a)
   |                -------------- in this class definition
 4 |    (Greet :a Unit))
   |              ^^^^ unexpected trailing form

================================================================================
101 Malformed method definition
================================================================================

(package test)

(define-class (Oops :a)
  (Ouch "This method stubbed its toe" :a Unit))

--------------------------------------------------------------------------------

error: Malformed method definition
  --> test:4:41
   |
 3 |  (define-class (Oops :a)
   |                --------- in this class definition
 4 |    (Ouch "This method stubbed its toe" :a Unit))
   |                                           ^^^^ unexpected trailing form
